# dxvk-Fallout4

./: AVX2.md  README.md  SIMDCOUNTER.md  avx2hotpath.md  avx2stats.md  build_dx11.ps1  buildenv.h.in  clang-cl-dxvk-optimized.ini  dxvk.conf  implementationstate.md  meson.build  meson_options.txt  operationultra.md  plan.md  test.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: artifacts.yml  test-build-windows.yml
cachefile/: 5f16c32bb08325f8.dxvk.lut
conf/: dxvk.conf  sim_settlements_governor_budget_test.conf
include/native/wsi/: native_wsi.h
src/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_options.cpp  d3d11_options.h  d3d11_state.cpp  d3d11_swapchain.cpp  d3d11_swapchain.h  meson.build
src/dxvk/: dxvk_allocator.cpp  dxvk_constant_state.cpp  dxvk_context.cpp  dxvk_context.h  dxvk_descriptor_info.cpp  dxvk_descriptor_info.h  dxvk_graphics.cpp  dxvk_graphics.h  dxvk_graphics_state.h  dxvk_hash.h  dxvk_implicit_resolve.cpp  dxvk_memory.h  dxvk_meta_clear.cpp  dxvk_pipelayout.cpp  dxvk_pipelayout.h  dxvk_presenter.cpp  dxvk_presenter.h  dxvk_sampler.h  dxvk_shader_builtin.cpp  dxvk_shader_cache.cpp  dxvk_shader_io.h  dxvk_shader_ir.cpp  dxvk_shader_key.cpp  dxvk_stats.cpp  dxvk_stats.h  dxvk_swapchain_blitter.cpp  dxvk_util.cpp  meson.build
src/dxvk/hud/: dxvk_hud.cpp  dxvk_hud_item.cpp  dxvk_hud_item.h
src/dxvk/hud/shaders/: hud_simd_graph_frag.frag
src/spirv/: meson.build  spirv_code_buffer.cpp  spirv_compression.cpp
src/util/: meson.build  util_bit.h  util_fps_limiter.cpp  util_fps_limiter.h  util_frame_governor.cpp  util_frame_governor.h  util_lru.h  util_matrix.cpp  util_simd_perf.cpp  util_simd_perf.h  util_string.h  util_vector.h
src/wsi/: meson.build
subprojects/dxbc-spirv/: .gitmodules  LICENSE  README.md  config.h.in  meson.build  meson_options.txt
subprojects/dxbc-spirv/dxbc/: dxbc_api.cpp  dxbc_api.h  dxbc_container.cpp  dxbc_container.h  dxbc_control_flow.h  dxbc_converter.cpp  dxbc_converter.h  dxbc_disasm.cpp  dxbc_disasm.h  dxbc_interface.cpp  dxbc_interface.h  dxbc_io_map.cpp  dxbc_io_map.h  dxbc_parser.cpp  dxbc_parser.h  dxbc_registers.cpp  dxbc_registers.h  dxbc_resources.cpp  dxbc_resources.h  dxbc_signature.cpp  dxbc_signature.h  dxbc_types.cpp  dxbc_types.h
subprojects/dxbc-spirv/ir/: ir.cpp  ir.h  ir.md  ir_builder.cpp  ir_builder.h  ir_container.h  ir_disasm.cpp  ir_disasm.h  ir_divergence.cpp  ir_divergence.h  ir_dominance.cpp  ir_dominance.h  ir_legalize.cpp  ir_legalize.h  ir_serialize.cpp  ir_serialize.h  ir_utils.cpp  ir_utils.h
subprojects/dxbc-spirv/ir/passes/: ir_pass_arithmetic.cpp  ir_pass_arithmetic.h  ir_pass_buffer_kind.cpp  ir_pass_buffer_kind.h  ir_pass_cfg_cleanup.cpp  ir_pass_cfg_cleanup.h  ir_pass_cfg_convert.cpp  ir_pass_cfg_convert.h  ir_pass_cse.cpp  ir_pass_cse.h  ir_pass_derivative.cpp  ir_pass_derivative.h  ir_pass_descriptor_indexing.cpp  ir_pass_descriptor_indexing.h  ir_pass_function.cpp  ir_pass_function.h  ir_pass_lower_consume.cpp  ir_pass_lower_consume.h  ir_pass_lower_io.cpp  ir_pass_lower_io.h  ir_pass_lower_min16.cpp  ir_pass_lower_min16.h  ir_pass_propagate_resource_types.cpp  ir_pass_propagate_resource_types.h  ir_pass_propagate_types.cpp  ir_pass_propagate_types.h  ir_pass_remove_unused.cpp  ir_pass_remove_unused.h  ir_pass_scalarize.cpp  ir_pass_scalarize.h  ir_pass_scratch.cpp  ir_pass_scratch.h  ir_pass_ssa.cpp  ir_pass_ssa.h  ir_pass_ssa_utils.h  ir_pass_sync.cpp  ir_pass_sync.h
subprojects/dxbc-spirv/sm3/: sm3_converter.cpp  sm3_converter.h  sm3_disasm.cpp  sm3_disasm.h  sm3_io_map.cpp  sm3_io_map.h  sm3_parser.cpp  sm3_parser.h  sm3_registers.cpp  sm3_registers.h  sm3_resources.cpp  sm3_resources.h  sm3_spec_constants.cpp  sm3_spec_constants.h  sm3_spec_constants_layout.h  sm3_types.cpp  sm3_types.h
subprojects/dxbc-spirv/spirv/: spirv_builder.cpp  spirv_builder.h  spirv_mapping.cpp  spirv_mapping.h  spirv_types.h
subprojects/dxbc-spirv/tests/: meson.build  test_common.h  test_main.cpp  test_spirv.cpp
subprojects/dxbc-spirv/tests/api/: meson.build  test_api.cpp  test_api.h  test_api_arithmetic.cpp  test_api_arithmetic.h  test_api_common.h  test_api_dump.cpp  test_api_io.cpp  test_api_io.h  test_api_misc.cpp  test_api_misc.h  test_api_pass_arithmetic.cpp  test_api_pass_arithmetic.h  test_api_pass_buffer_kind.cpp  test_api_pass_buffer_kind.h  test_api_pass_lower_io.cpp  test_api_pass_lower_io.h  test_api_pass_scalarize.cpp  test_api_pass_scalarize.h  test_api_resources.cpp  test_api_resources.h  test_api_spirv.cpp  test_api_spirv.h
subprojects/dxbc-spirv/tests/dxbc/: test_dxbc.h  test_dxbc_common.cpp  test_dxbc_signature.cpp
subprojects/dxbc-spirv/tests/ir/: test_ir.h  test_ir_builder.cpp  test_ir_input_map.cpp  test_ir_op.cpp  test_ir_serialize.cpp  test_ir_type.cpp  test_ir_type_propagation.cpp
subprojects/dxbc-spirv/tests/util/: test_util.h  test_util_small_vector.cpp  test_util_vle.cpp
subprojects/dxbc-spirv/tools/: dxbc_compiler.cpp  dxbc_disasm.cpp  meson.build
subprojects/dxbc-spirv/util/: util_bit.h  util_byte_stream.h  util_console.h  util_debug.h  util_flags.h  util_float16.cpp  util_float16.h  util_fourcc.h  util_hash.h  util_log.cpp  util_log.h  util_md5.cpp  util_md5.h  util_small_vector.h  util_swizzle.cpp  util_swizzle.h  util_vle.h
subprojects/libdisplay-info/: displayid.c
